// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't render family members if there are none 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="one-whole background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up"
    onClick={[Function]}
  >
    <h7
      className="text-dark-secondary flush-bottom push-half-left display-inline-block"
    >
      Filter Transactions
    </h7>
    <span
      className="float-right flush icon-close"
      style={
        Object {
          "cursor": "pointer",
          "marginTop": "0px",
        }
      }
    />
  </div>
  <div
    className="one-whole outlined--bottom outlined--light"
  />
  <div
    className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up push-half-left"
  >
    <h7
      className="soft-half-top push-half-top text-dark-secondary display-inline-block"
    >
      Date Range
    </h7>
    <div
      className="grid one-whole flush-left@palm"
    >
      <div
        className="hard-left@palm grid__item one-whole"
      >
        <TagSelect
          currentActive=""
          items={
            Array [
              Object {
                "label": "2017",
                "value": "LastYear",
              },
              Object {
                "label": "Last Month",
                "value": "LastMonth",
              },
              Object {
                "label": "Year To Date",
                "value": "YearToDate",
              },
              Object {
                "label": "All Time",
                "value": "AllTime",
              },
            ]
          }
          onClick={[Function]}
          overrideActive={false}
        />
      </div>
    </div>
    <h7
      className="soft-half-top push-half-top text-dark-secondary display-inline-block"
    >
      Custom Dates
    </h7>
    <div
      className="grid one-whole flush-left@palm"
    >
      <div
        className="hard-left@palm grid__item one-whole display-inline-block"
      >
        <withRouter(Connect(TagWithoutData))
          active={false}
          className={false}
          clickAble={true}
          icon={
            <span
              className="icon-calendar push-half-left"
              style={
                Object {
                  "position": "relative",
                  "top": "-2px",
                }
              }
            />
          }
          key="1"
          label="Start Date"
          onClick={[Function]}
          val="StartDate"
        />
        <withRouter(Connect(TagWithoutData))
          active={false}
          className={false}
          clickAble={true}
          icon={
            <span
              className="icon-calendar push-half-left"
              style={
                Object {
                  "position": "relative",
                  "top": "-2px",
                }
              }
            />
          }
          key="2"
          label="End Date"
          onClick={[Function]}
          val="EndDate"
        />
      </div>
    </div>
    <div
      className="push-top"
    >
      <button
        className="btn one-whole@handheld"
        onClick={[Function]}
      >
        Filter Results
      </button>
    </div>
  </div>
</div>
`;

exports[`renders family members when expanded is true 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="one-whole background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up"
    onClick={[Function]}
  >
    <h7
      className="text-dark-secondary flush-bottom push-half-left display-inline-block"
    >
      Filter Transactions
    </h7>
    <span
      className="float-right flush icon-close"
      style={
        Object {
          "cursor": "pointer",
          "marginTop": "0px",
        }
      }
    />
  </div>
  <div
    className="one-whole outlined--bottom outlined--light"
  />
  <div
    className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up push-half-left"
  >
    <div>
      <h7
        className="push-top text-dark-secondary display-inline-block"
      >
        Family Members
      </h7>
      <div
        className=""
        key="0"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <div
          className=" display-inline-block outlined checkbox"
        />
        <h6
          className="soft-half-left display-inline-block"
        >
          jim
           
          bob
        </h6>
      </div>
      <div
        className=""
        key="1"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <div
          className=" display-inline-block outlined checkbox"
        />
        <h6
          className="soft-half-left display-inline-block"
        >
          sally
           
          bob
        </h6>
      </div>
    </div>
    <h7
      className="soft-half-top push-half-top text-dark-secondary display-inline-block"
    >
      Date Range
    </h7>
    <div
      className="grid one-whole flush-left@palm"
    >
      <div
        className="hard-left@palm grid__item one-whole"
      >
        <TagSelect
          currentActive=""
          items={
            Array [
              Object {
                "label": "2017",
                "value": "LastYear",
              },
              Object {
                "label": "Last Month",
                "value": "LastMonth",
              },
              Object {
                "label": "Year To Date",
                "value": "YearToDate",
              },
              Object {
                "label": "All Time",
                "value": "AllTime",
              },
            ]
          }
          onClick={[Function]}
          overrideActive={false}
        />
      </div>
    </div>
    <h7
      className="soft-half-top push-half-top text-dark-secondary display-inline-block"
    >
      Custom Dates
    </h7>
    <div
      className="grid one-whole flush-left@palm"
    >
      <div
        className="hard-left@palm grid__item one-whole display-inline-block"
      >
        <withRouter(Connect(TagWithoutData))
          active={false}
          className={false}
          clickAble={true}
          icon={
            <span
              className="icon-calendar push-half-left"
              style={
                Object {
                  "position": "relative",
                  "top": "-2px",
                }
              }
            />
          }
          key="1"
          label="Start Date"
          onClick={[Function]}
          val="StartDate"
        />
        <withRouter(Connect(TagWithoutData))
          active={false}
          className={false}
          clickAble={true}
          icon={
            <span
              className="icon-calendar push-half-left"
              style={
                Object {
                  "position": "relative",
                  "top": "-2px",
                }
              }
            />
          }
          key="2"
          label="End Date"
          onClick={[Function]}
          val="EndDate"
        />
      </div>
    </div>
    <div
      className="push-top"
    >
      <button
        className="btn one-whole@handheld"
        onClick={[Function]}
      >
        Filter Results
      </button>
    </div>
  </div>
</div>
`;

exports[`renders with props 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="one-whole background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up"
    onClick={[Function]}
  >
    <h7
      className="text-dark-secondary flush-bottom push-half-left display-inline-block"
    >
      Filter Transactions
    </h7>
    <span
      className="float-right flush icon-filter"
      style={
        Object {
          "cursor": "pointer",
          "marginTop": "0px",
        }
      }
    />
  </div>
  <div
    className="one-whole outlined--bottom outlined--light"
  />
</div>
`;

exports[`works with nickname 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="one-whole background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up"
    onClick={[Function]}
  >
    <h7
      className="text-dark-secondary flush-bottom push-half-left display-inline-block"
    >
      Filter Transactions
    </h7>
    <span
      className="float-right flush icon-close"
      style={
        Object {
          "cursor": "pointer",
          "marginTop": "0px",
        }
      }
    />
  </div>
  <div
    className="one-whole outlined--bottom outlined--light"
  />
  <div
    className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up push-half-left"
  >
    <div>
      <h7
        className="push-top text-dark-secondary display-inline-block"
      >
        Family Members
      </h7>
      <div
        className=""
        key="0"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <div
          className=" display-inline-block outlined checkbox"
        />
        <h6
          className="soft-half-left display-inline-block"
        >
          jimothy
           
          bob
        </h6>
      </div>
      <div
        className=""
        key="1"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <div
          className=" display-inline-block outlined checkbox"
        />
        <h6
          className="soft-half-left display-inline-block"
        >
          sally
           
          bob
        </h6>
      </div>
    </div>
    <h7
      className="soft-half-top push-half-top text-dark-secondary display-inline-block"
    >
      Date Range
    </h7>
    <div
      className="grid one-whole flush-left@palm"
    >
      <div
        className="hard-left@palm grid__item one-whole"
      >
        <TagSelect
          currentActive=""
          items={
            Array [
              Object {
                "label": "2017",
                "value": "LastYear",
              },
              Object {
                "label": "Last Month",
                "value": "LastMonth",
              },
              Object {
                "label": "Year To Date",
                "value": "YearToDate",
              },
              Object {
                "label": "All Time",
                "value": "AllTime",
              },
            ]
          }
          onClick={[Function]}
          overrideActive={false}
        />
      </div>
    </div>
    <h7
      className="soft-half-top push-half-top text-dark-secondary display-inline-block"
    >
      Custom Dates
    </h7>
    <div
      className="grid one-whole flush-left@palm"
    >
      <div
        className="hard-left@palm grid__item one-whole display-inline-block"
      >
        <withRouter(Connect(TagWithoutData))
          active={false}
          className={false}
          clickAble={true}
          icon={
            <span
              className="icon-calendar push-half-left"
              style={
                Object {
                  "position": "relative",
                  "top": "-2px",
                }
              }
            />
          }
          key="1"
          label="Start Date"
          onClick={[Function]}
          val="StartDate"
        />
        <withRouter(Connect(TagWithoutData))
          active={false}
          className={false}
          clickAble={true}
          icon={
            <span
              className="icon-calendar push-half-left"
              style={
                Object {
                  "position": "relative",
                  "top": "-2px",
                }
              }
            />
          }
          key="2"
          label="End Date"
          onClick={[Function]}
          val="EndDate"
        />
      </div>
    </div>
    <div
      className="push-top"
    >
      <button
        className="btn one-whole@handheld"
        onClick={[Function]}
      >
        Filter Results
      </button>
    </div>
  </div>
</div>
`;
